hphp/hack/test/typecheck/fc_enum_17.php.rust_elab.exp
File "fc_enum_17.php", line 3, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_17.php", line 9, characters 3-4:
Was expecting a class, but got a value of type Foo (Typing[4026])
